--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 </head>
 <body>
     <!-- HEADER -->
+
 <header class="header">
     <div class="header__container container">
         <nav class="header__nav">
-            <a href="/index.html" lang="en" class="header__logo logo">
+            <a href="/index.html" lang="en" class="logo__header logo">
                 <span class="logo__accent">Web</span>Studio</a>
 
             <ul class="header__list list">
@@ -41,7 +42,7 @@
             <li class="header__contacts--item">
                 <a class="header__contacts--link link" href="tel:+380961111111">
                     <svg class="header__icon icon" height="16px" width="10px">
-                        <use href="./images/icons.svg#icon-smartphone"></use>
+                        <use href="./saas/images/icons.svg#icon-smartphone"></use>
                     </svg>
                     +38 096 111 11 11
                 </a>
@@ -50,19 +51,104 @@
             <li class="header__contacts--item">
                 <a href="" class="header__contacts--link link" href="info@devstudio.com">
                     <svg class="header__icon icon" height="12px" width="16px">
-                        <use href="./images/icons.svg#icon-mail"></use>
+                        <use href="./saas/images/icons.svg#icon-mail"></use>
                     </svg>
                     info@devstudio.com
                 </a>
             </li>
         </ul>
     </div>
-<!-- 
-                <a href="/index.html" lang="en" class="footer__logo logo">
-                    <span class="logo__accent">Web</span>Studio</a> -->
 </header>
+
+    <!-- Унікальний контент -->
+
+<main>
+
+    <!-- Герой -->
+
+    <section class="hero">
+        <div class="container">
+            <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+            <button type="button" class="hero__button" data-modal-open>Замовити послугу</button>
+        </div>
+    </section>
+
+    <!-- Секція переваги компанії -->
+
+    <section class="benefits">
+        <div class="container">
+            <h2 class="visually-hidden">Переваги компанії</h2>
+            <ul class="benefits__list list">
+                <li class="benefits__item">
+                    <h3 class="benefits__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="benefits__text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li class="benefits__item">
+                    <h3 class="benefits__title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="benefits__text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li class="benefits__item">
+                    <h3 class="benefits__title">ПЛАНУВАННЯ</h3>
+                    <p class="benefits__text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li class="benefits__item">
+                    <h3 class="benefits__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="benefits__text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+</main>
 </body>
 </html>
 
-
+    <!-- <section class="benefits">
+        <div class="container">
+            <h2 class="visually-hidden">Переваги компанії</h2>
+            <ul class="benefits-list list">
+                <li class="benefits-item">
+                    <div class="icon-background">
+                        <svg class="icon-benefits" height="70" width="70">
+                            <use href="./images/icons.svg#icon-antenna"></use>
+                        </svg>
+                    </div>
+                    <h3 class="benefits-text-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="benefits-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                    </p>
+                </li>
+                <li class="benefits-item">
+                    <div class="icon-background">
+                        <svg class="icon-benefits" height="70" width="70">
+                            <use href="./images/icons.svg#icon-clock"></use>
+                        </svg>
+                    </div>
+                    <h3 class="benefits-text-title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="benefits-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li class="benefits-item">
+                    <div class="icon-background">
+                        <svg class="icon-benefits" height="70" width="70">
+                            <use href="./images/icons.svg#icon-diagram"></use>
+                        </svg>
+                    </div>
+                    <h3 class="benefits-text-title">ПЛАНУВАННЯ</h3>
+                    <p class="benefits-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li class="benefits-item">
+                    <div class="icon-background">
+                        <svg class="icon-benefits" height="70" width="70">
+                            <use href="./images/icons.svg#icon-astronaut"></use>
+                        </svg>
+                    </div>
+                    <h3 class="benefits-text-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="benefits-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+        </div>
+    </section> -->
+    
+    
+    <!-- <a href="/index.html" lang="en" class="logo__footer logo"></a>
+    <span class="logo__accent">Web</span>Studio</a> -->
 
