--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     <a href="" class="link__contract">Умови договору</a>
                 </label>
 
-                <button class="button__form" type="submit">Відправити</button>
+                <button class="form__button" type="submit">Відправити</button>
             </form>
         </div>
     </div>
