--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 <header class="header">
     <div class="header__container container">
         <nav class="header__nav">
-            <a href="/index.html" lang="en" class="logo__header logo">
+            <a href="./index.html" lang="en" class="logo__header logo">
                 <span class="logo__accent">Web</span>Studio</a>
 
             <ul class="header__list list">
                 <li class="header__item">
-                    <a href="" class="header__link link current" href="./index.html">Студія</a>
+                    <a class="header__link link current" href="./index.html">Студія</a>
                 </li>
                 <li class="header__item">
-                    <a href="" class="header__link link" href="./portfolio.html">Портфоліо</a>
+                    <a class="header__link link" href="./portfolio.html">Портфоліо</a>
                 </li>
                 <li class="header__item">
-                    <a href="" class="header__link link" href="">Контакти</a>
+                    <a class="header__link link" href="">Контакти</a>
                 </li>
             </ul>
         </nav>
@@ -42,7 +42,7 @@
             <li class="header__contacts--item">
                 <a class="header__contacts--link link" href="tel:+380961111111">
                     <svg class="icon" height="16px" width="10px">
-                        <use href="./saas/images/icons.svg#icon-smartphone"></use>
+                        <use href="./images/icons.svg#icon-smartphone"></use>
                     </svg>
                     +38 096 111 11 11
                 </a>
@@ -51,7 +51,7 @@
             <li class="header__contacts--item">
                 <a href="" class="header__contacts--link link" href="info@devstudio.com">
                     <svg class="icon" height="12px" width="16px">
-                        <use href="./saas/images/icons.svg#icon-mail"></use>
+                        <use href="./images/icons.svg#icon-mail"></use>
                     </svg>
                     info@devstudio.com
                 </a>
@@ -346,59 +346,6 @@
 
 </main>
 
-<!-- Модальне вікно
-
-<div class="backdrop is-hidden" data-modal>
-    <div class="modal">
-        <div class="button-close" data-modal-close>
-            <svg width="18px" height="18px" class="icon-close">
-                <use href="./images/icons.svg#icon-close-black"></use>
-            </svg>
-        </div>
-        <form>
-            <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
-            <label class="form-field">
-                <span class="form-label">Ім'я</span>
-                <input type="text" name="Name" autocomplete="off" class="modal-input">
-                <svg width="18" height="18" class="form-icon">
-                    <use href="./images/icons.svg#icon-person"></use>
-                </svg>
-
-            </label>
-
-            <label class="form-field">
-                <span class="form-label">Телефон</span>
-                <input type="text" name="Name" autocomplete="off" class="modal-input">
-                <svg width="18" height="18" class="form-icon">
-                    <use href="./images/icons.svg#icon-phone"></use>
-                </svg>
-
-            </label>
-
-            <label class="form-field">
-                <span class="form-label">Пошта</span>
-                <input type="text" name="Name" autocomplete="off" class="modal-input">
-                <svg width="18" height="18" class="form-icon">
-                    <use href="./images/icons.svg#icon-email"></use>
-                </svg>
-
-            </label>
-
-            <label class="form-field">
-                <span class="form-label">Коментар</span>
-                <textarea name="comment" class="modal-input modal-textarea" placeholder="Введіть текст"></textarea>
-
-            </label>
-            <label class="label-contract">
-                <input class="checkbox" type="checkbox" name="">
-                <span class="icon-checkbox"></span>
-                <span class="checkbox-text">Погоджуюсь з розсилкою та приймаю</span>
-                <a class="link-contract" href="">Умови договору</a>
-            </label>
-            <button class="button-form" type="submit">Відправити</button>
-        </form>
-    </div>
-</div> -->
 
     <!-- Footer -->
 
@@ -412,14 +359,14 @@
             <address class="address">
                 <ul class="address__list list">
                     <li class="address__item">
-                        <a href="" class="address__link address__link--location link">м. Київ, пр-т Лесі Українки,
+                        <a href="" class="address__link address__link--location">м. Київ, пр-т Лесі Українки,
                         26</a>
                     </li>
                     <li class="address__item">
-                        <a href="info@devstudio.com" class="address__link link">info@devstudio.com</a>
+                        <a href="info@devstudio.com" class="address__link">info@devstudio.com</a>
                     </li>
                     <li class="address__item">
-                        <a href="tel:+380961111111" class="address__link link">+38 096 111 11 11</a>
+                        <a href="tel:+380961111111" class="address__link">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </address>
@@ -472,66 +419,3 @@
 
 </body>
 </html>
-
-    
-
-
-<!-- <footer class="footer">
-    <div class="container container-footer">
-        <div class="footer-address">
-            <a href="./index.html" lang="en" class="footer-logo link"> <span class="logo-accent">Web</span>Studio </a>
-            <address class="address">
-                <ul class="address-list list">
-                    <li class="address-item"><a class="address-location link" href="">м. Київ, пр-т Лесі Українки,
-                            26</a></li>
-                    <li class="address-item"><a class="address-link link" href="">info@devstudio.com</a></li>
-                    <li class="address-item"><a class="address-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
-        </div>
-        <div class="join-in">
-            <b class="footer-title">ПРИЄДНУЙТЕСЬ</b>
-            <div class="footer-social">
-                <ul class="list footer-social-links">
-                    <li>
-                        <a href="" class="footer-link link">
-                            <svg class="icon-footer" height="20px" width="20px">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg></a>
-                    </li>
-                    <li><a href="" class="footer-link"> <svg class="icon-footer" height="20px" width="20px">
-                                <use href="./images/icons.svg#icon-twitter">
-                                </use>
-                            </svg></a></li>
-                    <li><a href="" class="footer-link"> <svg class="icon-footer" height="20px" width="20px">
-                                <use href="./images/icons.svg#icon-facebook">
-                                </use>
-                            </svg></a></li>
-                    <li><a href="" class="footer-link"> <svg class="icon-footer" height="20px" width="20px">
-                                <use href="./images/icons.svg#icon-linkedin">
-                                </use>
-                            </svg></a></li>
-                </ul>
-            </div>
-        </div>
-
-
-        <form class="footer-form">
-            <b class="footer-form-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</b>
-
-            <div class="footer-send-form">
-
-                <Label>
-                    <input type="email" placeholder="E-mail" class="footer-input" name="E-mail">
-                </Label>
-                <button class="footer-send-button"> Підписатися
-                    <svg width="24" height="24" class="icon-send">
-                        <use href="./images/icons.svg#icon-send"></use>
-                    </svg>
-                </button>
-            </div>
-        </form>
-    </div>
-</footer> -->
-
